--- a/css/style.css
+++ b/css/style.css
@@ -329,7 +329,8 @@
       font-size: 12px;
       text-transform: uppercase;
       letter-spacing: 2px;
-      text-decoration: none; }
+      text-decoration: none;
+      text-align: center; }
   .hero .desc-ani-reverse {
     animation: descOpacity2 500ms linear; }
   .hero .box-to-circle {
@@ -659,13 +660,17 @@
     justify-content: center;
     flex-wrap: wrap;
     width: 100%;
-    padding: 20px 0; }
+    padding: 20px;
+    padding-bottom: 60px; }
     @media (min-width: 700px) {
       .contact__social {
         padding: 60px 0; } }
     .contact__social-buttons {
-      width: 145px;
-      height: 145px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 115px;
+      height: 115px;
       background-color: white;
       border-radius: 10px;
       box-shadow: 0 8px 14px #171717;
@@ -674,10 +679,21 @@
       transition: 350ms; }
       @media (min-width: 700px) {
         .contact__social-buttons {
+          width: 145px;
+          height: 145px;
           margin-left: 55px;
-          margin-top: 0; }
+          margin-top: 0;
+          cursor: pointer; }
           .contact__social-buttons:hover {
-            background-color: #0077C0; } }
+            background-color: #0077C0; }
+          .contact__social-buttons:hover .email-container .email-icon {
+            fill: #ffffff; }
+          .contact__social-buttons:hover .phone-container .phone-icon {
+            fill: #ffffff; }
+          .contact__social-buttons:hover .facebook-container .facebook-icon {
+            fill: #ffffff; }
+          .contact__social-buttons:hover .instagram-container .instagram-icon {
+            fill: #ffffff; } }
       .contact__social-buttons:first-of-type {
         margin-left: 0; }
       .contact__social-buttons:nth-of-type(3) {
@@ -685,6 +701,34 @@
         @media (min-width: 700px) {
           .contact__social-buttons:nth-of-type(3) {
             margin-left: 55px; } }
+      .contact__social-buttons .email-container {
+        width: 45px; }
+        .contact__social-buttons .email-container .email-icon {
+          fill: #0077C0;
+          transition: 350ms; }
+      .contact__social-buttons .phone-container {
+        width: 25px; }
+        .contact__social-buttons .phone-container .phone-icon {
+          fill: #0077C0;
+          transition: 350ms; }
+      .contact__social-buttons .facebook-container {
+        width: 20px; }
+        .contact__social-buttons .facebook-container .facebook-icon {
+          fill: #0077C0;
+          transition: 350ms; }
+      .contact__social-buttons .instagram-container {
+        width: 35px; }
+        .contact__social-buttons .instagram-container .instagram-icon {
+          fill: #0077C0;
+          transition: 350ms; }
+
+.footer__logo {
+  width: 100%;
+  height: 20px;
+  margin: 30px 0;
+  background: url("../assets/logo-white.png");
+  background-repeat: no-repeat;
+  background-position: center; }
 
 .copyright {
   color: white;
