--- a/style.scss
+++ b/style.scss
@@ -460,6 +460,7 @@ $merrifont: 'Merriweather', sans-serif;
       text-transform: uppercase;
       letter-spacing: 2px;
       text-decoration: none;
+      text-align: center;
     }
   }
 
@@ -910,15 +911,19 @@ $merrifont: 'Merriweather', sans-serif;
     justify-content: center;
     flex-wrap: wrap;
     width: 100%;
-    padding: 20px 0;
+    padding: 20px;
+    padding-bottom: 60px;
 
     @media (min-width: 700px){
       padding: 60px 0;
     }
 
     &-buttons{
-      width: 145px;
-      height: 145px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 115px;
+      height: 115px;
       background-color: white;
       border-radius: 10px;
       box-shadow: 0 8px 14px #171717;
@@ -927,11 +932,26 @@ $merrifont: 'Merriweather', sans-serif;
       transition: 350ms;
 
       @media (min-width: 700px){
+        width: 145px;
+        height: 145px;
         margin-left: 55px;
         margin-top: 0;
+        cursor: pointer;
 
         &:hover {
           background-color: #0077C0;
+        }
+        &:hover .email-container .email-icon {
+          fill: #ffffff;
+        }
+        &:hover .phone-container .phone-icon {
+          fill: #ffffff;
+        }
+        &:hover .facebook-container .facebook-icon {
+          fill: #ffffff;
+        }
+        &:hover .instagram-container .instagram-icon {
+          fill: #ffffff;
         }
       }
 
@@ -945,8 +965,49 @@ $merrifont: 'Merriweather', sans-serif;
           margin-left: 55px;
         }
       }
+      .email-container {
+        width: 45px;
+
+        .email-icon {
+          fill: #0077C0;
+          transition: 350ms;
+        }
+      }
+      .phone-container {
+        width: 25px;
+
+        .phone-icon {
+          fill: #0077C0;
+          transition: 350ms;
+        }
+      }
+      .facebook-container {
+        width: 20px;
+
+        .facebook-icon {
+          fill: #0077C0;
+          transition: 350ms;
+        }
+      }
+      .instagram-container {
+        width: 35px;
+
+        .instagram-icon {
+          fill: #0077C0;
+          transition: 350ms;
+        }
+      }
     }
   }
+}
+
+.footer__logo {
+  width: 100%;
+  height: 20px;
+  margin: 30px 0;
+  background: url('../assets/logo-white.png');
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .copyright {
