Fix containers and facebook social to linkedin

--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,6 @@
     transform: translateX(0); } }
 
 .page-wrapper {
-  max-width: 1400px;
   margin: 0 auto; }
 
 .header {
@@ -203,7 +202,7 @@
     .hero {
       background: url("../assets/self-photo.png");
       background-repeat: no-repeat;
-      background-position-x: 950px;
+      background-position: right -200px center;
       justify-content: flex-start; } }
   .hero .hero__lines {
     position: absolute;
@@ -385,13 +384,18 @@
       .hero__cta {
         display: none; } }
 
+.web-design-container {
+  display: flex;
+  justify-content: center;
+  background-color: #1F1F1F; }
+
 .web-design {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   width: 100%;
+  max-width: 1600px;
   height: auto;
-  background-color: #1F1F1F;
   padding-bottom: 115px; }
   @media (min-width: 700px) {
     .web-design {
@@ -407,7 +411,7 @@
         display: block;
         width: 30%;
         margin-top: 225px;
-        margin-left: 120px; } }
+        margin-left: 100px; } }
     .web-design__box-title {
       position: relative;
       top: 50px;
@@ -694,7 +698,7 @@
             fill: #ffffff; }
           .contact__social-buttons:hover .phone-container .phone-icon {
             fill: #ffffff; }
-          .contact__social-buttons:hover .facebook-container .facebook-icon {
+          .contact__social-buttons:hover .linkedin-container .linkedin-icon {
             fill: #ffffff; }
           .contact__social-buttons:hover .instagram-container .instagram-icon {
             fill: #ffffff; } }
@@ -715,9 +719,9 @@
         .contact__social-buttons .phone-container .phone-icon {
           fill: #0077C0;
           transition: 350ms; }
-      .contact__social-buttons .facebook-container {
-        width: 20px; }
-        .contact__social-buttons .facebook-container .facebook-icon {
+      .contact__social-buttons .linkedin-container {
+        width: 30px; }
+        .contact__social-buttons .linkedin-container .linkedin-icon {
           fill: #0077C0;
           transition: 350ms; }
       .contact__social-buttons .instagram-container {
