--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,14 @@
   100% {
     transform: translateX(0); } }
 
+@keyframes scrollLine {
+  0% {
+    transform: translateY(0); }
+  35% {
+    transform: translateY(200px); }
+  100% {
+    transform: translateY(200px); } }
+
 .page-wrapper {
   margin: 0 auto; }
 
@@ -368,6 +376,17 @@
           color: #0077C0;
           transform: translateY(-5px);
           opacity: .75; } }
+  .hero__scroll {
+    width: 1px;
+    height: 100px;
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    overflow: hidden; }
+    .hero__scroll-line {
+      stroke-width: 1px;
+      stroke: #1f1f1f;
+      animation: scrollLine 3000ms ease infinite 3500ms; }
   .hero__cta {
     display: flex;
     justify-content: center;
@@ -376,11 +395,7 @@
     .hero__cta-call {
       font-size: 10px;
       font-family: "Open Sans", sans-serif;
-<<<<<<< HEAD
-      letter-spacing: 0px;
-=======
       letter-spacing: 0.25px;
->>>>>>> master
       line-height: 20px;
       text-align: center;
       margin-bottom: 100px; }
@@ -391,7 +406,10 @@
 .web-design-container {
   display: flex;
   justify-content: center;
-  background-color: #1F1F1F; }
+  background: url("../assets/web-design-bg.jpg");
+  background-size: auto;
+  background-repeat: repeat;
+  background-attachment: fixed; }
 
 .web-design {
   display: flex;
@@ -539,7 +557,7 @@
         .web-design__images img {
           max-width: none; } }
   .web-design__shadowmobile {
-    display: flex;
+    display: none;
     justify-content: center;
     width: 100%;
     margin-top: -150px; }
