--- a/css/style.css
+++ b/css/style.css
@@ -829,9 +829,9 @@
         .contact__social-buttons .linkedin-container .linkedin-icon {
           fill: #0077C0;
           transition: 350ms; }
-      .contact__social-buttons .behance-container {
+      .contact__social-buttons .behance-container2 {
         width: 45px; }
-        .contact__social-buttons .behance-container .behance-icon {
+        .contact__social-buttons .behance-container2 .behance-icon2 {
           fill: #0077C0;
           transition: 350ms; }
 
