--- a/style.scss
+++ b/style.scss
@@ -1161,10 +1161,10 @@ $merrifont: 'Merriweather', sans-serif;
           transition: 350ms;
         }
       }
-      .behance-container {
+      .behance-container2 {
         width: 45px;
 
-        .behance-icon {
+        .behance-icon2 {
           fill: #0077C0;
           transition: 350ms;
         }
