--- a/css/style.css
+++ b/css/style.css
@@ -805,7 +805,7 @@
             fill: #ffffff; }
           .contact__social-buttons:hover .linkedin-container .linkedin-icon {
             fill: #ffffff; }
-          .contact__social-buttons:hover .behance-container .behance-icon {
+          .contact__social-buttons:hover .behance-container2 .behance-icon2 {
             fill: #ffffff; } }
       .contact__social-buttons:first-of-type {
         margin-left: 0; }
