--- a/style.scss
+++ b/style.scss
@@ -1122,7 +1122,7 @@ $merrifont: 'Merriweather', sans-serif;
         &:hover .linkedin-container .linkedin-icon {
           fill: #ffffff;
         }
-        &:hover .behance-container .behance-icon {
+        &:hover .behance-container2 .behance-icon2 {
           fill: #ffffff;
         }
       }
